Made the icon the trigger for expand/collapse, not the whole <li>. Uses the same constant for new child nodes everywhere. Test fixtures are much more better.

--- a/src/css/ideaList.css
+++ b/src/css/ideaList.css
@@ -1,43 +1,41 @@
 
 ul.tree, ul.tree ul {
-    list-style-type: none;
-    list-style-position: inside;
     margin: 2px;
     padding: 0;
 }
 
 li {
-    margin-left: 20px;
+    list-style: none;
+    margin-left: 10px;
     padding: 2px;
 }
 
-li.expanded {
-    list-style-image: url("../images/less.png")
+li.expanded div.toggle {
+    background-image: url("../images/less.png");
 }
 
-li.contracted {
-    list-style-image: url("../images/more.png")
+li.contracted div.toggle {
+    background-image: url("../images/more.png");
 }
 
 span.selected {
-    background-color: #f7f179;
+    background-color: #c4e2fa;
     border: thin solid black;
     border-radius: 5px;
     padding: 2px;
 }
 
-span.unselected {
-    background-color: white;
-    border: none;
-    padding: 2px;
-}
-
-span.hover {
-    background-color: #f5f5dc;
-}
-
 [contenteditable]:hover {
-    outline: 1px dotted #ccc;
+    outline: 1px dotted #949494;
+}
+
+.toggle {
+    height: 11px;
+    width: 11px;
+    display: block;
+    float: left;
+    position: relative;
+    margin: 3px;
 }
 
 .options {
